package.json changes reverted

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://swarajtrivedi.github.io/cfrc-fundraiser",
   "name": "cfrc-fundraiser",
   "version": "0.1.0",
   "private": true,
